tests/baselines/reference/parserBreakStatement1.d.errors.txt
parserBreakStatement1.d.ts(1,1): error TS1036: Statements are not allowed in ambient contexts.


==== parserBreakStatement1.d.ts (1 errors) ====
    break;
    ~~~~~
!!! error TS1036: Statements are not allowed in ambient contexts.